--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "jquery": "^3.6.0"
   },
   "devDependencies": {
+    "@types/firefox-webext-browser": "^94.0.1",
     "@types/jquery": "^3.5.13",
     "copy-webpack-plugin": "^10.2.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
-    "web-ext-types": "^3.2.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
   }
