--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
+  "extends": "@sindresorhus/tsconfig/tsconfig.json",
   "compilerOptions": {
-    "target": "es2017",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
-  }
+    "declaration": false,
+    "target": "es2020",
+    "outDir": "dist"
+  },
+  "include": [
+    "src",
+    "webpack.config.js"
+  ]
 }
