Update manifest and downgrade to version 2

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,19 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "LeetCode Timer",
-  "description": "Firefox extension for timing LeetCode problems",
+  "description": "LeetCode Timer is a Firefox extension for timing LeetCode problems",
   "homepage_url": "https://github.com/briankosw/leetcode-timer",
-  "version": "0.1.0",
+  "developer": {
+    "name": "Brian Ko",
+    "url": "https://github.com/briankosw"
+  },
   "icons": {
     "64": "./dist/images/lct.svg"
   },
+  "version": "0.2.0",
+  "permissions": [
+    "*://leetcode.com/problems/*"
+  ],
   "content_scripts": [
     {
       "matches": [
