Add cross browser support (#1)
* Add webextension-polyfill for cross-browser support

* Change relative file paths for scripts and images

Chrome can't load images when using relative file paths that
start with `./`

* Add browser-specific manifests

* Replace LeetCode Timer icon with png

Chrome doesn't support SVGs for extension icon

* Change type for helper function

* Update README for Chrome addition

* Bump version to 0.2.1

--- a/manifests/firefox-manifest.json
+++ b/manifests/firefox-manifest.json
@@ -3,6 +3,10 @@
   "name": "LeetCode Timer",
   "description": "LeetCode Timer is a Firefox extension for timing LeetCode problems",
   "homepage_url": "https://github.com/briankosw/leetcode-timer",
+  "developer": {
+    "name": "Brian Ko",
+    "url": "https://github.com/briankosw"
+  },
   "icons": {
     "128": "dist/images/lct.png"
   },
