--- a/manifests/chrome-manifest.json
+++ b/manifests/chrome-manifest.json
@@ -1,15 +1,12 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "LeetCode Timer",
-  "description": "LeetCode Timer is a Firefox extension for timing LeetCode problems",
+  "description": "LeetCode Timer is a Chrome extension for timing LeetCode problems",
   "homepage_url": "https://github.com/briankosw/leetcode-timer",
+  "version": "0.2.1",
   "icons": {
     "128": "dist/images/lct.png"
   },
-  "version": "0.2.1",
-  "permissions": [
-    "*://leetcode.com/problems/*"
-  ],
   "content_scripts": [
     {
       "matches": [
@@ -24,9 +21,12 @@
       ]
     }
   ],
-  "web_accessible_resources": [
-    "dist/images/dark-timer.svg",
-    "dist/images/option.svg",
-    "dist/images/reset.svg"
-  ]
+  "web_accessible_resources": [{
+    "resources": [
+      "dist/images/dark-timer.svg",
+      "dist/images/option.svg",
+      "dist/images/reset.svg"
+    ],
+    "matches": ["https://leetcode.com/*"]
+  }]
 }
