Change DOM element generation from jQuery to JSX
Using dom-chef to build DOM elements instead of using jQuery

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "dom-chef": "^5.0.0",
     "jquery": "^3.6.0",
     "webextension-polyfill": "^0.8.0"
   },
